Styles/login.css
html,body {
    height: 95%;
    position: relative;
    background-color: wheat;
}
.homeIcon {
    width: 100px; height: 100px;
    margin: 0;
    display: inline;
}
#wrapper{
    width: 80%;
    background-color: transparent;
    font-family: 'Nunito', sans-serif;
    margin-right: auto;
    margin-left: auto;
    min-height:100%;
    overflow: hidden;
    display: block;
    position: relative;
    padding-bottom: 50px;
}
label{
    font-weight: bold;
}
h1{
    margin-top: 0;
    margin-bottom: -2% !important;
}
h2{
    text-align: center;
    margin-bottom: -1%;
}
.modalDialog h2{
    text-align: center;
    margin-top: 1%;
}
hr{
    margin-bottom: 5%;
    width: 100%;
}
.hrError{
    margin-bottom: 1%;
}

.modalDialog hr{
    margin-bottom: 1%;
    width: 100%;
}
#header {
    margin-top: 20px;
    text-align: center;
    text-decoration: none;
    font-family: 'Comfortaa', cursive;
    font-size: 30px;
    color: black;
}
.errorMessage{
    padding: 5px 0 5px 0;
    border-radius: 7px;
    color: #D8000C;
    background-color: #FFD2D2;
    text-align: center;
    width: 75%;
    margin-left: 12%;
    display: inline-block;
}
#signupError{
    padding: 5px 3px 5px 3px;
    border-radius: 7px;
    color: #D8000C;
    background-color: #FFD2D2;
    text-align: center;
    width: fit-content;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
    margin-top: 0;
    display: inline-block;
    position: absolute;
}
.invalidInput{
    box-shadow: 0 0 3pt 2pt rgba(216, 0, 12, 0.66);
}
.checkbox{
    font-weight: normal;
}
.loginForm{
    color: black;
    height: 100%;
}

.container{
    width: 95%;
    margin-left: auto;
    margin-right: auto;
}

button.guest{
    width: auto;
    font-size: 16px;
}
button {
    font-size: 15px;
    background-color: #4267b2;
    color: white;
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
    cursor: pointer;
    width: 100%;
    border-radius: 12px;
}
button:hover {
    opacity: 0.8;
}
input[type=text], input[type=password] {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 12px;
    box-sizing: border-box;
    outline: none;
}
input[type=text]:focus, input[type=password]:focus {
    box-shadow: 0 0 3pt 2pt #5f96ff;
}

span.pass {
    float: right;
}

.createAccount {
    text-align: center;
}

#footer {
    text-align: center;
    position: absolute;
    bottom: 0;
    width: 100%;
}
.modalDialog button{
    width: available;
}
.modalDialog {
    position: fixed;
    font-family: Arial, Helvetica, sans-serif;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: rgba(0,0,0,0.8);
    z-index: 99999;
    opacity:0;
    -webkit-transition: opacity 400ms ease-in;
    -moz-transition: opacity 400ms ease-in;
    transition: opacity 400ms ease-in;
    pointer-events: none;
}

.modalDialog:target {
    opacity:1;
    pointer-events: auto;
}

.modalDialog > div {
    width: 40%;
    position: relative;
    margin: 1.5% auto;
    padding: 5px 20px 13px 20px;
    border-radius: 10px;
    background: wheat;
}
.close {
    background: #606061;
    color: #FFFFFF;
    line-height: 25px;
    position: absolute;
    right: -12px;
    text-align: center;
    top: -10px;
    width: 24px;
    text-decoration: none;
    font-weight: bold;
    -webkit-border-radius: 12px;
    -moz-border-radius: 12px;
    border-radius: 12px;
    -moz-box-shadow: 1px 1px 3px #000;
    -webkit-box-shadow: 1px 1px 3px #000;
    box-shadow: 1px 1px 3px #000;
}

.close:hover { background: #4267b2; }

